# test-ci

./: CMakeLists.txt  LICENSE  README.md  appveyor.yml  appveyor.yml.mute  mytest.cpp  test-mkdir.cpp
.github/workflows/: macos.yml  win10.yaml
